# dottor

./: .gitignore  Cargo.toml  LICENSE  Readme.md  flake.nix  setup_test.nu
docs/examples/: dotconfig.toml  dottor.toml
src/: config.rs  err.rs  io.rs  io_util.rs  main.rs  structure.rs
