[package]
name = "dottor"
version = "0.1.0"
authors = ["Carl Schierig"]
edition = "2021"
description = "a simple dotfiles manager"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]

# command line argument parser
clap = { version = "3.1.10", features = ["cargo"] }
# toml parser
toml = "0.5.9"
# serialisation
serde = { version = "1.0.136", features = ["derive"] }
regex = "1.5.5"
lazy_static = "1.4.0"
path_abs = "0.5.1"
globset = "0.4.8"
shellexpand = "2.1.0"
# diffing library for comparing changes when pulling
similar = { version = "2.1.0", features = ["unicode", "inline"] }
# git integration
git2 = "0.14.2"
