[package]
name = "dottor"
version = "0.1.0"
authors = ["Carl Schierig"]
edition = "2021"
description = "a simple dotfiles manager"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]

# command line argument parser
clap = { version = "3.2.20", features = ["cargo"] }
# toml parser
toml = "0.5.9"
# serialisation
serde = { version = "1.0.144", features = ["derive"] }
regex = "1.6.0"
lazy_static = "1.4.0"
path_abs = "0.5.1"
globset = "0.4.9"
shellexpand = "2.1.2"
# diffing library for comparing changes when pulling
similar = { version = "2.2.0", features = ["unicode", "inline"] }
# git integration
git2 = "0.15.0"
