[package]
name = "dottor"
version = "0.1.0"
authors = ["Carl Schierig"]
edition = "2021"
description = "a simple dotfiles manager"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]

# command line argument parser
clap = { version = "4.5.1", features = ["cargo"] }
# toml parser
toml = "0.8.10"
# serialisation
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.3"
lazy_static = "1.4.0"
path_abs = "0.5.1"
globset = "0.4.14"
shellexpand = "3.1.0"
# diffing library for comparing changes when pulling
similar = { version = "2.4.0", features = ["unicode", "inline"] }
# git integration
git2 = "0.18.2"
